<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.blasting.BlastingDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/action_bar" />

                <ImageView
                    android:id="@+id/ivBlasting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_image" />

                <TextView
                    android:id="@+id/tvBlastingTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/name"
                    android:textAllCaps="true"
                    android:textColor="@color/title_text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvBlastingDefinition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="35dp"
                    android:justificationMode="inter_word"
                    android:text="@string/text_todo"
                    android:textSize="16sp"
                    tools:targetApi="o" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:text="@string/fundamental_concepts"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvBlastingConcepts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="35dp"
                    android:justificationMode="inter_word"
                    android:text="@string/text_todo"
                    android:textSize="16sp"
                    tools:targetApi="o" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:text="@string/why_is_it_relevant"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvBlastingRelevant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="35dp"
                    android:justificationMode="inter_word"
                    android:text="@string/text_todo"
                    android:textSize="16sp"
                    tools:targetApi="o" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:text="@string/basic_principles"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvBlastingPrinciples"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="35dp"
                    android:justificationMode="inter_word"
                    android:text="@string/text_todo"
                    android:textSize="16sp"
                    tools:targetApi="o" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:text="@string/practical_applications"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvBlastingApplications"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="35dp"
                    android:justificationMode="inter_word"
                    android:text="@string/text_todo"
                    android:textSize="16sp"
                    tools:targetApi="o" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:text="@string/common_challenges"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvBlastingChallenges"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="35dp"
                    android:justificationMode="inter_word"
                    android:text="@string/text_todo"
                    android:textSize="16sp"
                    tools:targetApi="o" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:text="@string/recent_developments"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvBlastingDevelopments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="35dp"
                    android:justificationMode="inter_word"
                    android:text="@string/text_todo"
                    android:textSize="16sp"
                    tools:targetApi="o" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:text="@string/conclusion"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvBlastingConclusion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="35dp"
                    android:justificationMode="inter_word"
                    android:text="@string/text_todo"
                    android:textSize="16sp"
                    tools:targetApi="o" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:text="@string/additional_resources"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvBlastingResources"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="3dp"
                    android:justificationMode="inter_word"
                    android:text="@string/text_todo"
                    android:textSize="16sp"
                    tools:targetApi="o" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llLinkToSocialNetwork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/linkedin_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="50dp"
                    android:gravity="center"
                    android:text="@string/link_description"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>