<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.drilling.DrillingActivity">

    <include layout="@layout/action_bar" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/svDrillingFilter"
        style="@style/SearchViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:inputType="textPersonName"
        app:iconifiedByDefault="false"
        app:queryHint="@string/search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDrilling"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llGoToBlastingActivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/toolbar_color"
            android:orientation="vertical"
            android:padding="7dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/todo"
                android:src="@drawable/blasting" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/text_blasting"
                android:textColor="@color/black"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/toolbar_color"
            android:orientation="vertical"
            android:padding="7dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/todo"
                android:src="@drawable/drilling" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/text_drilling"
                android:textColor="@color/black"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>